asr-model-v2-infra/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: asr-model-v2-ingress
spec:
  rules:
  - host: model-api.vakyansh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asr-model-v2-envoy
            port:
              number: 51051
  tls: 
    - hosts: 
        - model-api.vakyansh.in
      secretName: my-tls-secret
